Frontend Modification: Fixed the bug on the buttons to avoid overlapping of images

--- a/src/style/order.scss
+++ b/src/style/order.scss
@@ -122,6 +122,7 @@ main.route-order{
         width: 70%;
         margin: 0 auto; 
         margin-bottom: 1%;
+        z-index: 2;
     }
     
     .quantity-btn {
